# openclaw-desktop

./: .gitignore  README.md  launch.bat  launch.vbs  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
