[package]
name = "openclaw-desktop"
version = "2.0.0"
edition = "2021"
description = "OpenClaw Desktop Gateway Chat Client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"
sha2 = "0.11.0"
